[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/chisel2.png" type="Texture" id=1]
[ext_resource path="res://code/Chisel.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "chisel"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("chisel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15.6, 0.3 ), Vector2( 13.4, 0.3 ), Vector2( 17.7, 0.3 ) ]
}

[node name="Chisel" type="Node2D"]
light_mask = 0
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="RayCast2DT" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 0.204029, -4.83897 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="RayCast2DM" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( -0.118894, -0.012701 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="RayCast2DB" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 0.0909885, 5.15571 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="RayCast2DT2" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 9.7738, -4.89804 )
enabled = true
cast_to = Vector2( 20.4, 0 )
collision_mask = 2

[node name="RayCast2DM2" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 9.45088, -0.0717735 )
enabled = true
cast_to = Vector2( 20.4, 0 )
collision_mask = 2

[node name="RayCast2DB2" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 9.66076, 5.09664 )
enabled = true
cast_to = Vector2( 20.4, 0 )
collision_mask = 2

[node name="RayCast2DT3" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 21.4997, -4.72082 )
enabled = true
cast_to = Vector2( 8.8, 0 )
collision_mask = 2

[node name="RayCast2DM3" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 21.1768, 0.105445 )
enabled = true
cast_to = Vector2( 8.8, 0 )
collision_mask = 2

[node name="RayCast2DB3" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 21.3867, 5.27386 )
enabled = true
cast_to = Vector2( 8.8, 0 )
collision_mask = 2

[node name="RayCast2DT4" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 29.2973, -4.83897 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="RayCast2DM4" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 28.9744, -0.0127001 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="RayCast2DB4" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2( 29.1843, 5.15571 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="chisel" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 15.6, 0.3 )
scale = Vector2( 0.146885, 0.146885 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chisel = SubResource( 1 )
